--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
     <style name="CustomButton" parent="Widget.AppCompat.Button">
         <item name="android:textAllCaps">false</item>
         <item name="background">@drawable/border_round_btn</item>
-        <item name="fontFamily">@font/poppins_medium</item>
+        <item name="fontFamily">@font/roboto_medium</item>
         <item name="android:textSize">16sp</item>
     </style>
 </resources>
