--- a/app/src/main/res/layout/activity_get_started.xml
+++ b/app/src/main/res/layout/activity_get_started.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".GetStartedActivity">
 
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
         android:layout_width="wrap_content"
@@ -48,14 +49,14 @@
         android:fontFamily="@font/roboto_light"
         android:text="@string/let_s_get_started"
         android:textColor="@color/darkMainColor"
-        android:textSize="28sp"
+        android:textSize="32sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
         app:layout_constraintTop_toTopOf="@+id/guideline4" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/getStartedDescp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
@@ -70,7 +71,7 @@
 
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/continueEmailBTN"
         style="@style/CustomButton"
         android:layout_width="0dp"
         android:layout_height="48dp"
@@ -144,14 +145,14 @@
         android:text="@string/continue_with_twitter"
         android:textAllCaps="false"
         android:textColor="@color/darkMainColor"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintBottom_toTopOf="@+id/signUpMessage"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/guideline2" />
 
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/signUpMessage"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
