--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="primaryColor">#ffffff</color>
     <color name="primaryLightColor">#ffffff</color>
     <color name="primaryDarkColor">#cccccc</color>
-    <color name="mainColor">#376cf3</color>
+    <color name="mainColor">#0F43FF</color>
     <color name="darkMainColor">#0c0c0c</color>
     <color name="secondaryLightColor">#7a9aff</color>
     <color name="secondaryDarkColor">#0042bf</color>
