--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    tools:context=".screens.DetailsFragment"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".screens.DetailsFragment">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -64,11 +64,11 @@
             android:id="@+id/password_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:fontFamily="@font/poppins_regular"
             android:text="Name"
             android:textColor="@color/darkMainColor"
             android:textSize="14sp"
-            android:layout_marginTop="20dp"
             app:layout_constraintStart_toStartOf="@+id/guideline5"
             app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
@@ -92,13 +92,13 @@
 
 
         <RadioGroup
-            android:id="@+id/stu_tea_radgrp"
+            android:id="@+id/student_or_Teacher"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:background="@drawable/border_input_bg"
             android:orientation="horizontal"
             android:padding="10dp"
-            android:layout_marginTop="20dp"
             app:layout_constraintEnd_toStartOf="@+id/guideline6"
             app:layout_constraintStart_toStartOf="@+id/guideline5"
             app:layout_constraintTop_toBottomOf="@+id/name_input">
@@ -112,7 +112,6 @@
                 android:button="@android:color/transparent"
                 android:checked="true"
                 android:gravity="center"
-                android:onClick="onRadioButtonClicked"
                 android:padding="15dp"
                 android:text="Student"
                 android:textColor="@color/white"
@@ -127,7 +126,6 @@
                 android:button="@android:color/transparent"
                 android:checked="false"
                 android:gravity="center"
-                android:onClick="onRadioButtonClicked"
                 android:padding="15dp"
                 android:text="Teacher"
                 android:textColor="@color/darkGreyText"
@@ -141,13 +139,13 @@
             style="@style/CustomButton"
             android:layout_width="0dp"
             android:layout_height="48dp"
-            android:layout_margin="10dp"
+            android:layout_marginBottom="30dp"
             android:background="@drawable/filled_round_btn"
             android:elevation="0dp"
             android:fontFamily="@font/roboto_medium"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
-            android:text="Sign Up"
+            android:text="Continue"
             android:textAllCaps="false"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/imageView3"
