--- a/app/src/main/res/layout/fragment_home_notes.xml
+++ b/app/src/main/res/layout/fragment_home_notes.xml
@@ -17,7 +17,7 @@
             />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab"
+            android:id="@+id/create"
             style="@style/FloatingActionButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
