--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,6 +16,8 @@
         <!-- Customize your theme here. -->
         <item name="android:buttonStyle">@style/CustomButton</item>
         <item name="floatingActionButtonStyle">@style/FloatingActionButtonStyle</item>
+        <item name="popupMenuStyle">@style/MyPopupMenu</item>
+
 
     </style>
 </resources>
