--- a/app/src/main/res/layout/fragment_create_note.xml
+++ b/app/src/main/res/layout/fragment_create_note.xml
@@ -3,23 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".screens.Notes.CreateNoteFragment">
 
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
-
+        android:orientation="vertical"
         >
 
 
 
 
-
-
         <EditText
-                android:id="@+id/title_input"
+                android:id="@+id/etTitle"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:layout_marginTop="16dp"
@@ -29,37 +27,92 @@
                 android:cursorVisible="true"
                 android:ems="10"
                 android:fontFamily="@font/roboto_light"
-                android:hint="Title"
+                android:hint="Title..."
                 android:inputType="textPersonName"
                 android:paddingStart="16dp"
+            android:maxLines="1"
                 android:textColor="@color/darkMainColor"
                 android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
+
+            />
 
         <EditText
-            android:id="@+id/name_input"
+            android:id="@+id/etSubtitle"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:layout_marginTop="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/border_input_bg"
             android:cursorVisible="true"
+            android:maxLines="1"
             android:ems="10"
             android:fontFamily="@font/roboto_light"
-            android:hint="Title"
+            android:hint="Subtitle..."
             android:inputType="textPersonName"
             android:paddingStart="16dp"
             android:textColor="@color/darkMainColor"
             android:textSize="18sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/title_label" />
+
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="16dp"
+
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="25dp"
+                android:id="@+id/ivRedDot"
+                android:background="@drawable/red_dot"
+
+                android:layout_height="25dp"
+                />
 
 
 
-    </androidx.appcompat.widget.LinearLayoutCompat>
+            <ImageView
+                android:layout_width="25dp"
+                android:id="@+id/ivYellowDot"
+                android:background="@drawable/yellow_dot"
+                android:layout_height="25dp"
+                android:layout_marginStart="12dp"
+                />
+
+            <ImageView
+                android:layout_width="25dp"
+                android:id="@+id/ivGreenDot"
+                android:background="@drawable/green_dot"
+                android:layout_height="25dp"
+                android:layout_marginStart="12dp"
+                />
+        </LinearLayout>
+
+        <EditText
+            android:id="@+id/body_input"
+            android:layout_width="match_parent"
+            android:layout_height="350dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:gravity="start"
+            android:padding="16dp"
+            android:background="@drawable/border_input_bg"
+            android:cursorVisible="true"
+            android:ems="10"
+            android:fontFamily="@font/roboto_light"
+            android:hint="Note..."
+            android:inputType="textPersonName"
+            android:textColor="@color/darkMainColor"
+            android:textSize="18sp"
+
+            />
+    </LinearLayout>
+
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/saveNotes"
         style="@style/FloatingActionButtonStyle"
