--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,6 @@
     <color name="secondaryTextColor">#ffffff</color>
     <color name="greyText">#8E94A3</color>
     <color name="darkGreyText">#6E7586</color>
+    <color name="red">#FF0000</color>
+    <color name="yellow">#FFFF00</color>
 </resources>
