--- a/app/src/main/res/layout/fragment_create_note.xml
+++ b/app/src/main/res/layout/fragment_create_note.xml
@@ -105,7 +105,7 @@
             android:ems="10"
             android:fontFamily="@font/roboto_light"
             android:hint="Note..."
-            android:inputType="textPersonName"
+            android:inputType="textMultiLine"
             android:textColor="@color/darkMainColor"
             android:textSize="18sp"
 
