--- a/app/src/main/res/layout/fragment_home_notes.xml
+++ b/app/src/main/res/layout/fragment_home_notes.xml
@@ -9,10 +9,74 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_margin="8dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:gravity="center_vertical"
+            android:id="@+id/linearLayoutfilter"
+            android:orientation="horizontal">
 
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:id="@+id/ivAllNotesPriority"
+                android:background="@drawable/filter_list">
+
+            </ImageView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="High"
+                android:textColor="@color/red"
+                android:textSize="18sp"
+                android:background="@drawable/priority_bg"
+                android:paddingStart="30dp"
+                android:paddingEnd="30dp"
+                android:paddingTop="10dp"
+                android:layout_margin="5dp"
+                android:paddingBottom="10dp"
+                android:id="@+id/tvHighPriority"
+                ></TextView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Medium"
+                android:layout_margin="5dp"
+                android:textColor="@color/yellow"
+                android:textSize="18sp"
+                android:background="@drawable/priority_bg"
+                android:paddingStart="30dp"
+                android:paddingEnd="30dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:id="@+id/tvMediumPriority"
+                ></TextView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Low"
+                android:layout_margin="5dp"
+                android:textColor="@color/teal_200"
+                android:textSize="18sp"
+                android:background="@drawable/priority_bg"
+                android:paddingStart="30dp"
+                android:paddingEnd="30dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:id="@+id/tvLowPriority"
+                ></TextView>
+
+        </LinearLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/linearLayoutfilter"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:id="@+id/rvNotes"
 
             />
