--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -45,6 +45,9 @@
         <action
             android:id="@+id/action_teachersFragment_to_bottomSheetFragment"
             app:destination="@id/bottomSheetFragment" />
+        <action
+            android:id="@+id/action_teachersFragment_to_meetingsActivity"
+            app:destination="@id/meetingsActivity" />
     </fragment>
     <fragment
         android:id="@+id/homeNotesFragment"
@@ -84,4 +87,9 @@
         android:name="com.example.projectx.screens.BottomSheetFragment"
         android:label="fragment_bottom_sheet"
         tools:layout="@layout/fragment_bottom_sheet" />
+    <activity
+        android:id="@+id/meetingsActivity"
+        android:name="com.example.projectx.screens.MeetingsActivity"
+        android:label="activity_meetings"
+        tools:layout="@layout/activity_meetings" />
 </navigation>
