--- a/app/src/main/res/layout/fragment_create_note.xml
+++ b/app/src/main/res/layout/fragment_create_note.xml
@@ -27,7 +27,7 @@
                 android:cursorVisible="true"
                 android:ems="10"
                 android:fontFamily="@font/roboto_light"
-                android:hint="Title..."
+                android:hint="Subject"
                 android:inputType="textPersonName"
                 android:paddingStart="16dp"
             android:maxLines="1"
@@ -48,7 +48,7 @@
             android:maxLines="1"
             android:ems="10"
             android:fontFamily="@font/roboto_light"
-            android:hint="Subtitle..."
+            android:hint="Outline..."
             android:inputType="textPersonName"
             android:paddingStart="16dp"
             android:textColor="@color/darkMainColor"
@@ -104,7 +104,7 @@
             android:cursorVisible="true"
             android:ems="10"
             android:fontFamily="@font/roboto_light"
-            android:hint="Note..."
+            android:hint="Theory..."
             android:inputType="textMultiLine"
             android:textColor="@color/darkMainColor"
             android:textSize="18sp"
