--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,6 +10,9 @@
         android:label="fragment_get_started"
         tools:layout="@layout/fragment_get_started" >
         <action
+            android:id="@+id/action_getStartedFragment_to_signUpFragment"
+            app:destination="@id/signUpFragment" />
+        <action
             android:id="@+id/action_getStartedFragment_to_detailsFragment"
             app:destination="@id/detailsFragment" />
         <action
@@ -24,9 +27,15 @@
         <action
             android:id="@+id/action_detailsFragment_to_teachersFragment"
             app:destination="@id/teachersFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/signUpFragment"
+        android:name="com.example.projectx.screens.SignUpFragment"
+        android:label="fragment_sign_up"
+        tools:layout="@layout/fragment_sign_up" >
         <action
-            android:id="@+id/action_detailsFragment_to_studentFragment"
-            app:destination="@id/studentFragment" />
+            android:id="@+id/action_signUpFragment_to_detailsFragment"
+            app:destination="@id/detailsFragment" />
     </fragment>
     <fragment
         android:id="@+id/teachersFragment"
@@ -42,6 +51,9 @@
         <action
             android:id="@+id/action_teachersFragment_to_meetingHome"
             app:destination="@id/meetingHome" />
+        <action
+            android:id="@+id/action_teachersFragment_to_classGroupFragment"
+            app:destination="@id/classGroupFragment" />
     </fragment>
     <fragment
         android:id="@+id/homeNotesFragment"
@@ -87,15 +99,8 @@
         android:label="activity_meeting_home"
         tools:layout="@layout/activity_meeting_home" />
     <fragment
-        android:id="@+id/studentFragment"
-        android:name="com.example.projectx.screens.StudentFragment"
-        android:label="fragment_student"
-        tools:layout="@layout/fragment_student" >
-        <action
-            android:id="@+id/action_studentFragment_to_homeNotesFragment"
-            app:destination="@id/homeNotesFragment" />
-        <action
-            android:id="@+id/action_studentFragment_to_meetingHome"
-            app:destination="@id/meetingHome" />
-    </fragment>
+        android:id="@+id/classGroupFragment"
+        android:name="com.example.projectx.screens.ClassGroupFragment"
+        android:label="fragment_class_group"
+        tools:layout="@layout/fragment_class_group" />
 </navigation>
