added assignment implementation

--- a/app/src/main/res/menu/create_fabmenu.xml
+++ b/app/src/main/res/menu/create_fabmenu.xml
@@ -15,5 +15,9 @@
         android:title="Your Notes"
         app:showAsAction="never" />
 
-
+    <item
+        android:id = "@+id/give_assignment"
+        android:title="Assignments"
+        app:showAsAction="never"
+        />
 </menu>
