--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,13 +17,16 @@
         <item name="android:buttonStyle">@style/CustomButton</item>
         <item name="floatingActionButtonStyle">@style/FloatingActionButtonStyle</item>
         <item name="popupMenuStyle">@style/MyPopupMenu</item>
-
+        <item name="android:fontFamily">@font/googlesans_regular</item>
 
     </style>
+
     <style name="Theme.ProjectX.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+
     <style name="Theme.ProjectX.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
     <style name="Theme.ProjectX.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
