--- a/app/src/main/res/layout/fragment_class_group.xml
+++ b/app/src/main/res/layout/fragment_class_group.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f5f5f5"
-    tools:context=".screens.ClassGroupFragment">
+    tools:context=".screens.Teachers.ClassGroupFragment">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -69,6 +69,7 @@
             android:layout_height="wrap_content"
             android:clipChildren="false"
             android:clipToOutline="false"
+            android:paddingEnd="20dp"
             android:clipToPadding="false"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
