--- a/app/src/main/res/layout/fragment_teachers.xml
+++ b/app/src/main/res/layout/fragment_teachers.xml
@@ -7,6 +7,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".screens.TeachersFragment">
 
+
+
+
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -16,6 +20,22 @@
         android:layout_height="match_parent"
         android:paddingBottom="20dp"
         tools:context=".screens.TeachersActivity">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/fui_transparent"
+            android:backgroundTint="@color/fui_transparent"
+            android:minHeight="?attr/actionBarSize"
+            android:outlineSpotShadowColor="#9F9F9F"
+            android:paddingTop="20dp"
+            android:theme="?attr/actionBarTheme"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+        </androidx.appcompat.widget.Toolbar>
+
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
@@ -27,7 +47,8 @@
             app:cardElevation="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/guideline7">
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            >
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
