--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -32,10 +32,14 @@
         tools:layout="@layout/fragment_details" >
         <action
             android:id="@+id/action_detailsFragment_to_teachersFragment"
-            app:destination="@id/teachersFragment" />
+            app:destination="@id/teachersFragment"
+            app:popUpTo="@id/nav_graph.xml"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_detailsFragment_to_studentFragment"
-            app:destination="@id/studentFragment" />
+            app:destination="@id/studentFragment"
+            app:popUpTo="@id/nav_graph.xml"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/teachersFragment"
@@ -54,6 +58,12 @@
         <action
             android:id="@+id/action_teachersFragment_to_teacherAssignmentFragment"
             app:destination="@id/teacherAssignmentFragment" />
+        <action
+            android:id="@+id/action_teachersFragment_to_detailsFragment"
+            app:destination="@id/detailsFragment" />
+        <action
+            android:id="@+id/action_teachersFragment_to_getStartedFragment"
+            app:destination="@id/getStartedFragment" />
     </fragment>
     <fragment
         android:id="@+id/homeNotesFragment"
@@ -113,6 +123,15 @@
             android:id="@+id/action_studentFragment_to_studentAssignment"
             app:destination="@id/studentAssignment"
             app:enterAnim="@animator/nav_default_enter_anim" />
+        <action
+            android:id="@+id/action_studentFragment_to_detailsFragment"
+            app:destination="@id/detailsFragment" />
+        <action
+            android:id="@+id/action_studentFragment_to_detailsFragment2"
+            app:destination="@id/detailsFragment" />
+        <action
+            android:id="@+id/action_studentFragment_to_getStartedFragment"
+            app:destination="@id/getStartedFragment" />
     </fragment>
     <fragment
         android:id="@+id/studentAssignment"
